--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "material-icons": "^0.3.1",
     "vue": "^2.6.10",
+    "vue-agile": "^1.0.11",
     "vue-router": "^3.1.3",
     "vuesax": "^3.11.1"
   },
